autotests/syntax-tests-simple-refal/tests/negative/negative81.sref
Name { Name Name , $FORWARD Name Name : { } : , : = : = ; =
; } ; 